<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.MainActivity">

    <!-- Language Toggle -->
    <Button
        android:id="@+id/btnLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:layout_margin="16dp"
        android:background="@drawable/lang_toggle_background"
        android:textColor="@android:color/white"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:textStyle="bold"
        android:layout_gravity="start"
        />
    <!-- Or replace with @string/language_button -->

    <!-- Cuisine Categories Title -->
    <TextView
        android:id="@+id/txtCuisinesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuisine_categories"
        android:textStyle="bold"
        android:paddingTop="8dp" />

    <!-- Horizontal Cuisine Recycler -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCuisine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:orientation="horizontal" />

    <!-- Top Dishes Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_dishes"
        android:textStyle="bold"
        android:paddingTop="12dp" />

    <!-- Top Dishes Recycler -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTopDishes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp" />

    <!-- View Cart Button -->
    <Button
        android:id="@+id/btnCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_cart"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp" />



</LinearLayout>
